# veritas-analyst

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: architecture.md  dev-log-2026-07-16.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
frontend/: .env.example  README.md  next.config.js  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Chat.tsx
frontend/lib/: api.ts
scripts/: generate_sample_docs.py
tests/: test_agents_engine.py  test_api_cli.py  test_ingestion_retrieval.py
veritas/: __init__.py  cli.py  config.py  embeddings.py  engine.py  errors.py  grounding.py  llm.py  logging_setup.py  mockdata.py  models.py  text_utils.py
veritas/agents/: __init__.py  graph.py  router.py  specialists.py  synthesizer.py
veritas/ingestion/: __init__.py  chunking.py  loader.py
veritas/retrieval/: __init__.py  bm25.py  hybrid.py  vectorstore.py
veritas/serving/: __init__.py  api.py  ui.py
